--- a/Schoole_Students/Students/Update.resx
+++ b/Schoole_Students/Students/Update.resx
@@ -121,7 +121,7 @@
   <data name="pnMain.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFoSURBVChTFcrtTxJxAMDx+7t84XTLZdNp07BITfMRSoOM
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAFoSURBVChTFcrtTxJxAMDx+7t84XTLZdNp07BITfMRSoOM
         TDPT6azppsutFygPB3fAcdcd3HEgTxMt0Ull6l/07cfn9UcK1+85rPxlr3TFtvOT9VydZaNEQLPxpQym
         EmlGYzLSdxEPyn/4Wrxi0zln1arzTsQFLc+savAikeJZO36r3bEn4nbxkk/2Oe+tGgG9iC+T56Wq81xO
         8SQaR9oX8cvJbzbcS1bsM5bMGq9FnMnkGFd0nsoqj9txt3rLlohrbpNQ/ow3ZpX5rMtkOodXyTIcV+mP
@@ -1119,10 +1119,16 @@
   <metadata name="bunifuElipseMainFrm.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>339, 91</value>
   </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>28</value>
+  </metadata>
   <metadata name="bunifuElipseMainLab.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>505, 91</value>
   </metadata>
   <metadata name="bunifuElipseBtnMin.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>670, 91</value>
+  </metadata>
+  <metadata name="entityCommand1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>855, 91</value>
   </metadata>
 </root>
